# cli

./: .dockerignore  .env.local.example  .gitignore  .gitmodules  ADI-STYLING.md  AGENTS.md  CLAUDE.md  Cargo.toml  FLOWCODECONTEXT.md  PLAN-hybrid-proxy.md  PLUGIN_CATALOG.md  PLUGIN_UPDATE_CHECKLIST.md  TODO_PLUGIN_ABI_MIGRATION.md  V3_ADOPTION_STATUS.md  V3_FINAL_STATUS.md  V3_MIGRATION_NOTES.md  V3_MIGRATION_PROGRESS.md  V3_MIGRATION_SUMMARY.md  V3_NEXT_STEPS.md  V3_SESSION_2026-01-31.md  adi-plugin-system-overview.md  agents.md  architecture-review.md  docker-compose.dev.yml  docker-compose.local.yml  hive-architecture-review.md  hive-plugin-system-overview.md  install.sh  opencode.jsonc  package.json  work-with-editor.md
.adi/: .gitignore  config.toml  flags.toml  hive.yaml  linter.toml  shortcuts.yaml
.cargo/: config.toml
apps/flowmap-api/: CLAUDE.md  Cargo.toml
apps/flowmap-api/src/: main.rs
crates/adi-analytics-api/: CLAUDE.md  Cargo.toml  Dockerfile
crates/adi-analytics-api/core/: Cargo.toml
crates/adi-analytics-api/core/src/: models.rs  queries.rs
crates/adi-analytics-api/http/: Cargo.toml
crates/adi-analytics-api/http/src/: main.rs
crates/adi-analytics-api/http/src/routes/: api.rs  overview.rs  tasks.rs  users.rs
crates/adi-analytics-api/src/: main.rs  models.rs
crates/adi-analytics-api/src/routes/: api.rs  mod.rs  overview.rs  tasks.rs  users.rs
crates/adi-analytics-ingestion/: CLAUDE.md  Cargo.toml  Dockerfile
crates/adi-analytics-ingestion/core/: Cargo.toml
crates/adi-analytics-ingestion/core/src/: lib.rs
crates/adi-analytics-ingestion/http/: Cargo.toml
crates/adi-analytics-ingestion/http/src/: main.rs
crates/adi-analytics-ingestion/src/: main.rs  worker.rs
crates/adi-auth-core/: Cargo.toml
crates/adi-auth-core/src/: email.rs  error.rs  lib.rs  middleware.rs  token.rs  types.rs
crates/adi-auth-core/src/storage/: sqlite.rs
crates/adi-auth-http/: Cargo.toml  Dockerfile
crates/adi-auth-http/src/: main.rs
crates/adi-balance-api/: CLAUDE.md  Cargo.toml
crates/adi-balance-api/migrations/: 002_create_transactions.sql
crates/adi-balance-api/src/: auth.rs  config.rs  error.rs  main.rs  middleware.rs
crates/adi-balance-api/src/handlers/: balances.rs  transactions.rs
crates/adi-balance-api/src/models/: balance.rs  transaction.rs
crates/adi-credentials-api/: Cargo.toml  api.tsp
crates/adi-credentials-api/migrations/: 002_remove_is_active.sql
crates/adi-credentials-api/src/: auth.rs  crypto.rs  main.rs  middleware.rs
crates/adi-credentials-api/src/models/: credential.rs
crates/adi-embed-plugin/: Cargo.toml  plugin.toml
crates/adi-embed-plugin/src/: lib.rs
crates/adi-linter-cli/: Cargo.toml
crates/adi-linter-plugin/: Cargo.toml
crates/adi-linter-plugin/src/: lib.rs
crates/adi-llm-extract-plugin/: Cargo.toml  plugin.toml
crates/adi-llm-extract-plugin/src/: lib.rs
crates/adi-logging-service/: Cargo.toml
crates/adi-logging-service/src/: main.rs  routes.rs  writer.rs
crates/auth-http/: CLAUDE.md  Cargo.toml
crates/auth-http/src/: main.rs
crates/cli/: CLAUDE.md  Cargo.toml  DAEMON.md
crates/cli/plugins/: build.rs  translation.rs
crates/cli/plugins/de-DE/: Cargo.toml  messages.ftl
crates/cli/plugins/en-US/: Cargo.toml  messages.ftl
crates/cli/plugins/es-ES/: Cargo.toml  messages.ftl
crates/cli/plugins/fr-FR/: Cargo.toml  messages.ftl
crates/cli/plugins/ja-JP/: Cargo.toml  messages.ftl
crates/cli/plugins/ko-KR/: Cargo.toml  messages.ftl
crates/cli/plugins/ru-RU/: Cargo.toml  messages.ftl
crates/cli/plugins/uk-UA/: Cargo.toml  messages.ftl
crates/cli/plugins/zh-CN/: Cargo.toml  messages.ftl
crates/cli/src/: args.rs  clienv.rs  cmd_config.rs  cmd_daemon.rs  cmd_external.rs  cmd_info.rs  cmd_interactive.rs  cmd_logs.rs  cmd_plugin.rs  cmd_run.rs  cmd_search.rs  cmd_start.rs  cmd_theme.rs  completions.rs  error.rs  init.rs  lib.rs  main.rs  plugin_registry.rs  plugin_runtime.rs  self_update.rs  user_config.rs
crates/cli/src/daemon/: client.rs  executor.rs  health.rs  log_buffer.rs  mod.rs  protocol.rs  server.rs  services.rs  setup.rs
crates/embed-plugin/: Cargo.toml
crates/embed-plugin/src/: lib.rs
crates/lib-cli-common/: Cargo.toml
crates/lib-cli-common/src/: lib.rs  logging.rs  runner.rs
crates/lib-cli-common/src/output/: format.rs  icons.rs  mod.rs
crates/lib-client-anthropic/: Cargo.toml
crates/lib-client-anthropic/src/: error.rs
crates/lib-client-asana/: Cargo.toml
crates/lib-client-confluence/: Cargo.toml
crates/lib-client-confluence/src/: lib.rs
crates/lib-client-gitlab/: Cargo.toml
crates/lib-client-gitlab/src/: error.rs
crates/lib-client-google-auth/: Cargo.toml
crates/lib-client-google-auth/src/: token.rs
crates/lib-client-google-drive/: Cargo.toml
crates/lib-client-google-drive/src/: types.rs
crates/lib-client-jira/: Cargo.toml
crates/lib-client-jira/src/: types.rs
crates/lib-client-linear/: Cargo.toml
crates/lib-client-linear/src/: auth.rs  lib.rs
crates/lib-client-ollama/: Cargo.toml
crates/lib-client-slack/: Cargo.toml
crates/lib-client-slack/src/: blocks.rs
crates/lib-client-trello/: Cargo.toml
crates/lib-client-trello/src/: types.rs
crates/lib-llm-providers/: CLAUDE.md  Cargo.toml
crates/lib-llm-providers/src/: lib.rs
crates/lib-llm-providers/src/providers/: claude.rs  mod.rs  ollama.rs  openai.rs
crates/lib-llm-providers/src/router/: configurable.rs  cost_aware.rs  fallback.rs  load_balanced.rs  mod.rs
crates/lib-tarminal-sync/: CLAUDE.md  Cargo.toml  DEPLOYMENT.md  HOW-IT-WORKS.md  README.md  demo.sh
crates/lib-tarminal-sync/examples/: basic_sync.rs  simple_client.rs  web_client.html
crates/lib-tarminal-sync/src/: lib.rs  messages.rs
docs/: MIGRATION_V2_TO_V3.md  cocoon-runner-configuration.md  core-plugin-architecture.md  i18n-translation-plugin-system.md  lib-plugin-abi-v3-design.md  llm-extract-spec.md
plugins/: CLAUDE.md
scripts/: build-linux.sh  commit-submodule.sh  deploy.sh  dev.sh  init-databases.sql  install-cocoon.sh  install-refactored.sh  install.sh  lint-plugin.sh  publish-plugins.sh  (+5 more)
(+2533 files in other folders)
