[workspace]
resolver = "2"
exclude = [
    "crates/lib/lib-flowmap-core",
    "crates/lib/lib-flowmap-parser",
    "apps/flowmap-api",
    "crates/adi-analytics-api",
    "crates/adi-analytics-ingestion",
    # Apple Silicon only - requires Metal Toolchain
    "crates/lib/lib-client/uzu",
    "crates/adi-llm-uzu-plugin",
    # Nested workspaces (submodules with their own workspace roots)
    "crates/adi-executor",
    "crates/cocoon",
    "crates/cocoon-manager",
    "crates/adi-plugin-registry-http",
    "crates/tarminal-signaling-server",
]
members = [
    # CLI manager (submodule)
    "crates/adi-cli",

    # Shared libraries
    "crates/lib/lib-cli-common",
    "crates/lib/lib-migrations",
    "crates/lib/lib-typespec-api",
    "crates/lib/lib-task-store",
    "crates/lib/lib-i18n-core",

    # Indexer components (flat submodules)
    "crates/lib/lib-embed",
    "crates/adi-indexer/core",
    "crates/adi-indexer/cli",
    "crates/adi-indexer/http",

    # Tasks components
    "crates/adi-tasks/core",
    "crates/adi-tasks/cli",
    "crates/adi-tasks/http",

    # Linter components
    "crates/adi-linter/core",
    "crates/adi-linter/cli",

    # Auth components
    "crates/adi-auth-core",
    "crates/adi-auth-http",

    # Knowledgebase components
    "crates/adi-knowledgebase/core",
    "crates/adi-knowledgebase/cli",
    "crates/adi-knowledgebase/http",

    # Agent Loop components
    "crates/adi-agent-loop/core",
    "crates/adi-agent-loop/http",

    # Tarminal components (flat submodules)
    "crates/lib/lib-misc-color",
    "crates/lib/lib-animation",
    "crates/lib/lib-syntax-highlight",
    "crates/lib/lib-terminal-theme",
    "crates/lib/lib-json-tree",
    "crates/lib/lib-terminal-grid",
    "crates/lib/lib-iced-ui",
    "crates/lib/lib-tarminal-sync",

    # Analytics
    "crates/lib/lib-analytics-core",

    # Debug app (submodule)
    "crates/debug-metal-shader",
    "crates/tool-generate-heartbit",

    # API clients
    "crates/lib/lib-client/github",
    "crates/lib/lib-client/anthropic",
    "crates/lib/lib-client/openai",
    "crates/lib/lib-client/ollama",
    "crates/lib/lib-client/openrouter",
    "crates/lib/lib-client/google-auth",
    "crates/lib/lib-client/gemini",
    "crates/lib/lib-client/linear",
    "crates/lib/lib-client/gitlab",
    "crates/lib/lib-client/jira",
    "crates/lib/lib-client/slack",
    "crates/lib/lib-client/confluence",
    "crates/lib/lib-client/google-sheets",
    "crates/lib/lib-client/google-drive",
    "crates/lib/lib-client/google-docs",
    "crates/lib/lib-client/asana",
    "crates/lib/lib-client/trello",

    # Plugin system
    "crates/lib/lib-plugin-abi",
    "crates/lib/lib-plugin-manifest",
    "crates/lib/lib-plugin-verify",
    "crates/lib/lib-plugin-registry",
    "crates/lib/lib-plugin-host",

    # Indexer language plugins
    "crates/lib/lib-indexer-lang-abi",
    "crates/adi-lang/rust/plugin",
    "crates/adi-lang/python/plugin",
    "crates/adi-lang/typescript/plugin",
    "crates/adi-lang/cpp/plugin",
    "crates/adi-lang/go/plugin",
    "crates/adi-lang/java/plugin",
    "crates/adi-lang/csharp/plugin",
    "crates/adi-lang/ruby/plugin",
    "crates/adi-lang/php/plugin",
    "crates/adi-lang/swift/plugin",
    "crates/adi-lang/lua/plugin",

    # TypeSpec API generator
    "crates/lib/lib-typespec-api",

    # Core plugins
    "crates/adi-embed-plugin",
    "crates/adi-indexer/plugin",
    "crates/adi-tasks/plugin",
    "crates/adi-knowledgebase/plugin",
    "crates/adi-agent-loop/plugin",
    "crates/adi-linter/plugin",
    "crates/adi-coolify/plugin",
    "crates/adi-workflow/plugin",

    # Workflow translation plugins
    "crates/adi-workflow/langs/en",
    "crates/adi-workflow/langs/uk",
    "crates/adi-workflow/langs/zh",
    "crates/adi-workflow/langs/es",
    "crates/adi-workflow/langs/fr",
    "crates/adi-workflow/langs/de",
    "crates/adi-workflow/langs/ja",
    "crates/adi-workflow/langs/ko",
    "crates/adi-workflow/langs/ru",

    # Coolify translation plugins
    "crates/adi-coolify/lang/en",
    "crates/adi-coolify/lang/uk",
    "crates/adi-coolify/lang/zh",
    "crates/adi-coolify/lang/es",
    "crates/adi-coolify/lang/fr",
    "crates/adi-coolify/lang/de",
    "crates/adi-coolify/lang/ja",
    "crates/adi-coolify/lang/ko",
    "crates/adi-coolify/lang/ru",

    # Translation plugins
    "crates/adi-cli/plugins/en-US",
    "crates/adi-cli/plugins/zh-CN",
    "crates/adi-cli/plugins/uk-UA",
    "crates/adi-cli/plugins/es-ES",
    "crates/adi-cli/plugins/fr-FR",
    "crates/adi-cli/plugins/de-DE",
    "crates/adi-cli/plugins/ja-JP",
    "crates/adi-cli/plugins/ko-KR",
    "crates/adi-cli/plugins/ru-RU",
]

# FlowMap is standalone (not in workspace) - build with:
# cd apps/flowmap-api && cargo build

# Note: tarminal-signaling-server is standalone (not in workspace) - build with:
# cd crates/tarminal-signaling-server && cargo build

[workspace.package]
version = "0.8.4"
edition = "2021"
license = "BSL-1.0"
authors = ["ADI Team"]

[workspace.dependencies]
# Core crates (from submodules)
adi-indexer-core = { path = "crates/adi-indexer/core" }
adi-tasks-core = { path = "crates/adi-tasks/core" }
adi-knowledgebase-core = { path = "crates/adi-knowledgebase/core" }
adi-agent-loop-core = { path = "crates/adi-agent-loop/core" }
adi-auth-core = { path = "crates/adi-auth-core" }
adi-linter-core = { path = "crates/adi-linter/core" }

# Libraries (flat submodules)
lib-misc-color = { path = "crates/lib/lib-misc-color" }
lib-animation = { path = "crates/lib/lib-animation" }
lib-syntax-highlight = { path = "crates/lib/lib-syntax-highlight" }
lib-terminal-theme = { path = "crates/lib/lib-terminal-theme" }
lib-json-tree = { path = "crates/lib/lib-json-tree" }
lib-terminal-grid = { path = "crates/lib/lib-terminal-grid" }
lib-iced-ui = { path = "crates/lib/lib-iced-ui" }
lib-tarminal-sync = { path = "crates/lib/lib-tarminal-sync" }
lib-embed = { path = "crates/lib/lib-embed" }
lib-cli-common = { path = "crates/lib/lib-cli-common" }
lib-migrations = { path = "crates/lib/lib-migrations" }
lib-task-store = { path = "crates/lib/lib-task-store" }
lib-analytics-core = { path = "crates/lib/lib-analytics-core" }

# API clients
lib-client-github = { path = "crates/lib/lib-client/github" }
lib-client-anthropic = { path = "crates/lib/lib-client/anthropic" }
lib-client-openai = { path = "crates/lib/lib-client/openai" }
lib-client-ollama = { path = "crates/lib/lib-client/ollama" }
lib-client-openrouter = { path = "crates/lib/lib-client/openrouter" }
lib-client-google-auth = { path = "crates/lib/lib-client/google-auth" }
lib-client-gemini = { path = "crates/lib/lib-client/gemini" }
lib-client-linear = { path = "crates/lib/lib-client/linear" }
lib-client-gitlab = { path = "crates/lib/lib-client/gitlab" }
lib-client-jira = { path = "crates/lib/lib-client/jira" }
lib-client-slack = { path = "crates/lib/lib-client/slack" }
lib-client-confluence = { path = "crates/lib/lib-client/confluence" }
lib-client-google-sheets = { path = "crates/lib/lib-client/google-sheets" }
lib-client-google-drive = { path = "crates/lib/lib-client/google-drive" }
lib-client-google-docs = { path = "crates/lib/lib-client/google-docs" }
lib-client-asana = { path = "crates/lib/lib-client/asana" }
lib-client-trello = { path = "crates/lib/lib-client/trello" }

# Plugin system
lib-plugin-abi = { path = "crates/lib/lib-plugin-abi" }
lib-plugin-manifest = { path = "crates/lib/lib-plugin-manifest" }
lib-plugin-verify = { path = "crates/lib/lib-plugin-verify" }
lib-plugin-registry = { path = "crates/lib/lib-plugin-registry" }
lib-plugin-host = { path = "crates/lib/lib-plugin-host" }

# Indexer language plugins
lib-indexer-lang-abi = { path = "crates/lib/lib-indexer-lang-abi" }

# ABI stability for plugins
abi_stable = "0.11"

# Crypto for plugin verification
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"

# Dynamic loading
libloading = "0.8"

# Semver
semver = "1"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# HTTP client
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }

# Compression
flate2 = "1"
tar = "0.4"
zip = "0.6"

# File system
dirs = "5"
directories = "5.0"
walkdir = "2.5"
ignore = "0.4"
notify = { version = "6.1", features = ["serde"] }
fs2 = "0.4"

# Tree-sitter core
tree-sitter = "0.25"

# Tree-sitter languages
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-css = "0.25"
tree-sitter-html = "0.23"
tree-sitter-python = "0.25"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-kotlin = "0.3"
tree-sitter-scala = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-sql = "0.0.2"
tree-sitter-bash = "0.25"
tree-sitter-lua = "0.2"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-toml = "0.20"
tree-sitter-xml = "0.7"
tree-sitter-md = "0.5"
tree-sitter-dockerfile = "0.2"
tree-sitter-hcl = "1.1"
tree-sitter-graphql = "0.1"
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.24"
tree-sitter-elixir = "0.3"
tree-sitter-erlang = "0.15"
tree-sitter-zig = "1.1"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
memmap2 = "0.9"
bytemuck = { version = "1.24", features = ["derive"] }

# Vector search
usearch = "2.23"

# Embedding
fastembed = "4"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
uuid = { version = "1.19", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
glob = "0.3"
regex = "1"
fastrand = "2"

# Auth
jsonwebtoken = "9"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
