[workspace]
resolver = "2"
exclude = [
    # Apple Silicon only - requires Metal Toolchain
    "crates/lib/lib-client/uzu",
    "crates/llm-uzu-plugin",
    # Submodule parent dirs with placeholder Cargo.toml
    "crates/hive",
]
members = [
    # CLI manager (submodule)
    "crates/cli",

    # Shared libraries
    "crates/lib/lib-cli-common",
    "crates/lib/lib-console-output",
    "crates/lib/lib-daemon-core",
    "crates/lib/lib-http-common",
    "crates/lib/lib-migrations",
    "crates/lib/lib-typespec-api",
    "crates/lib/lib-task-store",
    "crates/lib/lib-i18n-core",
    "crates/lib/lib-mcp-core",
    # Removed: lib-plugin-abi-orchestration (migrated to lib-plugin-abi-v3)
    "crates/lib/lib-webrtc-manager",

    # Indexer components (flat submodules)
    "crates/lib/lib-embed",
    "crates/indexer/core",
    "crates/indexer/cli",
    "crates/indexer/http",

    # Tasks components
    "crates/tasks/core",
    "crates/tasks/cli",
    "crates/tasks/http",
    "crates/tasks/mcp",

    # Tools components (CLI tool index for LLM agents)
    "crates/tools/core",
    "crates/tools/plugin",

    # Workflow components
    "crates/workflow/mcp",

    # Linter components
    "crates/linter/core",

    # Auth components
    "crates/auth/core",
    "crates/auth/http",
    "crates/auth/cli",

    # Knowledgebase components
    "crates/knowledgebase/core",
    "crates/knowledgebase/cli",
    "crates/knowledgebase/http",

    # Agent Loop components
    "crates/agent-loop/core",
    "crates/agent-loop/http",

    # LLM Proxy components
    "crates/llm-proxy/core",
    "crates/llm-proxy/http",

    # Hive components
    "crates/hive/core",
    "crates/hive/http",
    "crates/hive/ssl",

    # Hive plugins
    "crates/hive/plugins/runner-docker",
    "crates/hive/plugins/obs-stdout",
    "crates/hive/plugins/obs-file",
    "crates/hive/plugins/proxy-cors",
    "crates/hive/plugins/proxy-rate-limit",
    "crates/hive/plugins/health-http",
    "crates/hive/plugins/health-tcp",
    "crates/hive/plugins/health-cmd",
    "crates/hive/plugins/health-grpc",
    "crates/hive/plugins/health-postgres",
    "crates/hive/plugins/health-redis",
    "crates/hive/plugins/health-mysql",
    "crates/hive/plugins/env-dotenv",
    "crates/hive/plugins/env-vault",
    "crates/hive/plugins/env-1password",
    "crates/hive/plugins/env-aws-secrets",
    "crates/hive/plugins/runner-compose",
    "crates/hive/plugins/runner-podman",
    "crates/hive/plugins/runner-watcher",
    "crates/hive/plugins/rollout-recreate",
    "crates/hive/plugins/rollout-blue-green",
    "crates/hive/plugins/proxy-ip-filter",
    "crates/hive/plugins/proxy-headers",
    "crates/hive/plugins/proxy-auth-jwt",
    "crates/hive/plugins/proxy-auth-basic",
    "crates/hive/plugins/obs-loki",
    "crates/hive/plugins/obs-prometheus",
    "crates/hive/plugins/proxy-compress",
    "crates/hive/plugins/proxy-cache",
    "crates/hive/plugins/proxy-rewrite",
    "crates/hive/plugins/proxy-auth-api-key",
    "crates/hive/plugins/proxy-auth-oidc",
    "crates/hive/plugins/orchestrator",

    # Tarminal components (flat submodules)
    "crates/lib/lib-misc-color",
    "crates/lib/lib-animation",
    "crates/lib/lib-syntax-highlight",
    "crates/lib/lib-terminal-theme",
    "crates/lib/lib-json-tree",
    "crates/lib/lib-terminal-grid",
    "crates/lib/lib-iced-ui",
    "crates/lib/lib-signaling-protocol",
    "crates/lib/lib-tarminal-sync",

    # Analytics
    "crates/lib/lib-analytics-core",

    # Logging
    "crates/lib/lib-logging-core",
    "crates/logging/core",
    "crates/logging/http",

    # Platform components
    "crates/platform/core",
    "crates/platform/http",
    "crates/platform/cli",

    # Tools
    "crates/tool-generate-heartbit",

    # API clients
    "crates/lib/lib-client/github",
    "crates/lib/lib-client/anthropic",
    "crates/lib/lib-client/openai",
    "crates/lib/lib-client/ollama",
    "crates/lib/lib-client/openrouter",
    "crates/lib/lib-client/google-auth",
    "crates/lib/lib-client/gemini",
    "crates/lib/lib-client/linear",
    "crates/lib/lib-client/gitlab",
    "crates/lib/lib-client/jira",
    "crates/lib/lib-client/slack",
    "crates/lib/lib-client/confluence",
    "crates/lib/lib-client/google-sheets",
    "crates/lib/lib-client/google-drive",
    "crates/lib/lib-client/google-docs",
    "crates/lib/lib-client/asana",
    "crates/lib/lib-client/trello",

    # Plugin system
    "crates/lib/lib-plugin-manifest",
    "crates/lib/lib-plugin-verify",
    "crates/lib/lib-plugin-registry",
    "crates/lib/lib-plugin-host",

    # Indexer language plugins
    "crates/lib/lib-indexer-lang-abi",
    "crates/lang/rust/plugin",
    "crates/lang/python/plugin",
    "crates/lang/typescript/plugin",
    "crates/lang/cpp/plugin",
    "crates/lang/go/plugin",
    "crates/lang/java/plugin",
    "crates/lang/csharp/plugin",
    "crates/lang/ruby/plugin",
    "crates/lang/php/plugin",
    "crates/lang/swift/plugin",
    "crates/lang/lua/plugin",

    # TypeSpec API generator
    "crates/lib/lib-typespec-api",

    # Core plugins
    "crates/embed-plugin",
    "crates/indexer/plugin",
    "crates/tasks/plugin",
    "crates/knowledgebase/plugin",
    "crates/agent-loop/plugin",
    "crates/linter/plugin",
    "crates/workflow/plugin",
    "crates/llm-proxy/plugin",
    "crates/hive/plugin",
    "crates/llm-extract-plugin",
    "crates/lib/lib-typespec-api/plugin",
    "crates/cocoon",
    "crates/webrtc-test-peer",

    # Browser Debug components
    "crates/browser-debug/core",
    "crates/browser-debug/plugin",
    "crates/browser-debug/mcp",

    # Audio components
    "crates/audio/core",
    "crates/audio/plugin",

    # Workflow translation plugins
    "crates/workflow/langs/en",
    "crates/workflow/langs/uk",
    "crates/workflow/langs/zh",
    "crates/workflow/langs/es",
    "crates/workflow/langs/fr",
    "crates/workflow/langs/de",
    "crates/workflow/langs/ja",
    "crates/workflow/langs/ko",
    "crates/workflow/langs/ru",

    # Translation plugins
    "crates/cli/plugins/en-US",
    "crates/cli/plugins/zh-CN",
    "crates/cli/plugins/uk-UA",
    "crates/cli/plugins/es-ES",
    "crates/cli/plugins/fr-FR",
    "crates/cli/plugins/de-DE",
    "crates/cli/plugins/ja-JP",
    "crates/cli/plugins/ko-KR",
    "crates/cli/plugins/ru-RU",

    # Signaling server
    "crates/signaling-server/core",
    "crates/signaling-server/http",

    # Executor
    "crates/executor/core",
    "crates/executor/http",

    # Plugin Registry
    "crates/plugin-registry/core",
    "crates/plugin-registry/http",

    # Balance
    "crates/balance/core",
    "crates/balance/http",
    "crates/balance/cli",

    # Credentials
    "crates/credentials/core",
    "crates/credentials/http",
    "crates/credentials/cli",

    # FlowMap
    "crates/lib/lib-flowmap-core",
    "crates/lib/lib-flowmap-parser",
    "apps/flowmap-api",

    # Analytics
    "crates/analytics/core",
    "crates/analytics/http",
    "crates/analytics-ingestion/core",
    "crates/analytics-ingestion/http",
]

# FlowMap is standalone (not in workspace) - build with:
# cd apps/flowmap-api && cargo build

[workspace.package]
version = "0.8.4"
edition = "2021"
license = "BSL-1.0"
authors = ["ADI Team"]

[workspace.dependencies]
# Core crates (from submodules)
indexer-core = { path = "crates/indexer/core" }
tasks-core = { path = "crates/tasks/core" }
knowledgebase-core = { path = "crates/knowledgebase/core" }
agent-loop-core = { path = "crates/agent-loop/core" }
auth-core = { path = "crates/auth/core" }
linter-core = { path = "crates/linter/core" }
llm-proxy-core = { path = "crates/llm-proxy/core" }
hive-core = { path = "crates/hive/core" }
audio-core = { path = "crates/audio/core" }
platform-core = { path = "crates/platform/core" }
tools-core = { path = "crates/tools/core" }
balance-core = { path = "crates/balance/core" }
credentials-core = { path = "crates/credentials/core" }
logging-core = { path = "crates/logging/core" }
executor-core = { path = "crates/executor/core" }
plugin-registry-core = { path = "crates/plugin-registry/core" }
signaling-server-core = { path = "crates/signaling-server/core" }

# Hive plugin system
hive-plugin-abi = { path = "crates/hive/plugins/abi" }
hive-runner-docker = { path = "crates/hive/plugins/runner-docker" }
hive-obs-stdout = { path = "crates/hive/plugins/obs-stdout" }
hive-obs-file = { path = "crates/hive/plugins/obs-file" }
hive-proxy-cors = { path = "crates/hive/plugins/proxy-cors" }
hive-proxy-rate-limit = { path = "crates/hive/plugins/proxy-rate-limit" }
hive-health-http = { path = "crates/hive/plugins/health-http" }
hive-health-tcp = { path = "crates/hive/plugins/health-tcp" }
hive-health-cmd = { path = "crates/hive/plugins/health-cmd" }
hive-health-grpc = { path = "crates/hive/plugins/health-grpc" }
hive-health-postgres = { path = "crates/hive/plugins/health-postgres" }
hive-health-redis = { path = "crates/hive/plugins/health-redis" }
hive-health-mysql = { path = "crates/hive/plugins/health-mysql" }
hive-env-dotenv = { path = "crates/hive/plugins/env-dotenv" }
hive-env-vault = { path = "crates/hive/plugins/env-vault" }
hive-env-1password = { path = "crates/hive/plugins/env-1password" }
hive-env-aws-secrets = { path = "crates/hive/plugins/env-aws-secrets" }
hive-runner-compose = { path = "crates/hive/plugins/runner-compose" }
hive-runner-podman = { path = "crates/hive/plugins/runner-podman" }
hive-runner-watcher = { path = "crates/hive/plugins/runner-watcher" }
hive-rollout-recreate = { path = "crates/hive/plugins/rollout-recreate" }
hive-rollout-blue-green = { path = "crates/hive/plugins/rollout-blue-green" }
hive-proxy-ip-filter = { path = "crates/hive/plugins/proxy-ip-filter" }
hive-proxy-headers = { path = "crates/hive/plugins/proxy-headers" }
hive-proxy-auth-jwt = { path = "crates/hive/plugins/proxy-auth-jwt" }
hive-proxy-auth-basic = { path = "crates/hive/plugins/proxy-auth-basic" }
hive-obs-loki = { path = "crates/hive/plugins/obs-loki" }
hive-obs-prometheus = { path = "crates/hive/plugins/obs-prometheus" }
hive-proxy-compress = { path = "crates/hive/plugins/proxy-compress" }
hive-proxy-cache = { path = "crates/hive/plugins/proxy-cache" }
hive-proxy-rewrite = { path = "crates/hive/plugins/proxy-rewrite" }
hive-proxy-auth-api-key = { path = "crates/hive/plugins/proxy-auth-api-key" }
hive-proxy-auth-oidc = { path = "crates/hive/plugins/proxy-auth-oidc" }

# Libraries (flat submodules)
lib-misc-color = { path = "crates/lib/lib-misc-color" }
lib-animation = { path = "crates/lib/lib-animation" }
lib-syntax-highlight = { path = "crates/lib/lib-syntax-highlight" }
lib-terminal-theme = { path = "crates/lib/lib-terminal-theme" }
lib-json-tree = { path = "crates/lib/lib-json-tree" }
lib-terminal-grid = { path = "crates/lib/lib-terminal-grid" }
lib-iced-ui = { path = "crates/lib/lib-iced-ui" }
lib-tarminal-sync = { path = "crates/lib/lib-tarminal-sync" }
lib-embed = { path = "crates/lib/lib-embed" }
lib-cli-common = { path = "crates/lib/lib-cli-common" }
lib-console-output = { path = "crates/lib/lib-console-output" }
lib-http-common = { path = "crates/lib/lib-http-common" }
lib-migrations = { path = "crates/lib/lib-migrations" }
lib-task-store = { path = "crates/lib/lib-task-store" }
lib-analytics-core = { path = "crates/lib/lib-analytics-core" }
lib-logging-core = { path = "crates/lib/lib-logging-core" }
lib-mcp-core = { path = "crates/lib/lib-mcp-core" }

# API clients
lib-client-github = { path = "crates/lib/lib-client/github" }
lib-client-anthropic = { path = "crates/lib/lib-client/anthropic" }
lib-client-openai = { path = "crates/lib/lib-client/openai" }
lib-client-ollama = { path = "crates/lib/lib-client/ollama" }
lib-client-openrouter = { path = "crates/lib/lib-client/openrouter" }
lib-client-google-auth = { path = "crates/lib/lib-client/google-auth" }
lib-client-gemini = { path = "crates/lib/lib-client/gemini" }
lib-client-linear = { path = "crates/lib/lib-client/linear" }
lib-client-gitlab = { path = "crates/lib/lib-client/gitlab" }
lib-client-jira = { path = "crates/lib/lib-client/jira" }
lib-client-slack = { path = "crates/lib/lib-client/slack" }
lib-client-confluence = { path = "crates/lib/lib-client/confluence" }
lib-client-google-sheets = { path = "crates/lib/lib-client/google-sheets" }
lib-client-google-drive = { path = "crates/lib/lib-client/google-drive" }
lib-client-google-docs = { path = "crates/lib/lib-client/google-docs" }
lib-client-asana = { path = "crates/lib/lib-client/asana" }
lib-client-trello = { path = "crates/lib/lib-client/trello" }

# Plugin system
lib-plugin-manifest = { path = "crates/lib/lib-plugin-manifest" }
lib-plugin-verify = { path = "crates/lib/lib-plugin-verify" }
lib-plugin-registry = { path = "crates/lib/lib-plugin-registry" }
lib-plugin-host = { path = "crates/lib/lib-plugin-host" }

# Indexer language plugins
lib-indexer-lang-abi = { path = "crates/lib/lib-indexer-lang-abi" }

# ABI stability for plugins
abi_stable = "0.11"

# Crypto for plugin verification
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"

# Dynamic loading
libloading = "0.8"

# Semver
semver = "1"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# HTTP client
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }

# Compression
flate2 = "1"
tar = "0.4"
zip = "0.6"

# File system
dirs = "5"
directories = "5.0"
walkdir = "2.5"
ignore = "0.4"
notify = { version = "6.1", features = ["serde"] }
fs2 = "0.4"

# Tree-sitter core
tree-sitter = "0.25"

# Tree-sitter languages
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-css = "0.25"
tree-sitter-html = "0.23"
tree-sitter-python = "0.25"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-kotlin = "0.3"
tree-sitter-scala = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-sql = "0.0.2"
tree-sitter-bash = "0.25"
tree-sitter-lua = "0.2"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-toml = "0.20"
tree-sitter-xml = "0.7"
tree-sitter-md = "0.5"
tree-sitter-dockerfile = "0.2"
tree-sitter-hcl = "1.1"
tree-sitter-graphql = "0.1"
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.24"
tree-sitter-elixir = "0.3"
tree-sitter-erlang = "0.15"
tree-sitter-zig = "1.1"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
memmap2 = "0.9"
bytemuck = { version = "1.24", features = ["derive"] }

# Vector search
usearch = "2.23"

# Embedding
fastembed = "4"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
http = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
uuid = { version = "1.19", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
glob = "0.3"
regex = "1"
fastrand = "2"
tempfile = "3"

# Auth
jsonwebtoken = "9"
shellexpand = "3"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
